# keycard-basecamp

./: .gitignore  .gitmodules  ACTIVITY_LOG_MESSAGES.md  ADOPT_LOGOS_TUTORIAL.md  CLAUDE.md  CMakeLists.txt  CODEX.md  IMPLEMENTATION.md  INTEGRATION.md  LESSONS.md  PROJECT_KNOWLEDGE.md  README.md  RUN.md  SECURITY_REVIEW.md  SPEC.md  SPIKE_LOGOS_MODULE_BUILDER.md  TESTING.md  WORKFLOW.md  flake.nix  metadata.json  test-auth-request.py
.github/: ISSUE_TEMPLATE.md
Design/: Keycard.pen
auth_showcase-core/: CMakeLists.txt
auth_showcase-core/modules/auth_showcase/: manifest.json
auth_showcase-core/src/: plugin.cpp  plugin.h  plugin_metadata.json
auth_showcase-ui/: CMakeLists.txt
auth_showcase-ui/plugins/auth_showcase-ui/: manifest.json  metadata.json
auth_showcase-ui/qml/: Main.qml
keycard-core/: CMakeLists.txt  metadata.json
keycard-core/modules/keycard/: manifest.json
keycard-core/src/: FilePairingStorage.cpp  FilePairingStorage.h  KeycardBridge.cpp  KeycardBridge.h  debug.h  keycard_manager.cpp  keycard_manager.h  keycard_types.h  plugin.cpp  plugin.h  plugin_metadata.json  secure_buffer.cpp
keycard-ui/: CMakeLists.txt  metadata.json
keycard-ui/plugins/keycard-ui/: manifest.json  metadata.json
keycard-ui/plugins/keycard_ui/: metadata.json
keycard-ui/qml/: ActivityLog.qml  AuthWindow.qml  AuthorizationScreen.qml  DebugPanel.qml  DesignTokens.qml  Main.qml  ManagementDashboard.qml  PinEntryScreen.qml  qmldir
keycard_ui/: CMakeLists.txt
keycard_ui/plugins/keycard_ui/: manifest.json  metadata.json
scripts/: package-lgx.sh  verify-install.sh
scripts/test/: inspect-module.sh  test-ui-standalone.sh  test-with-logoscore.sh
